--- a/Milestone-3/BERT p2.ipynb
+++ b/Milestone-3/BERT p2.ipynb
@@ -117,8 +117,8 @@
    "source": [
     "from transformers import BertForSequenceClassification, BertTokenizer\n",
     "\n",
-    "model = BertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=2)\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n"
+    "model = BertForSequenceClassification.from_pretrained('bert-base-cased', num_labels=2)\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-cased')\n"
    ]
   },
   {
@@ -221,11 +221,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import precision_recall_fscore_support\n",
+    "\n",
     "def evaluate_model(model, val_dataloader, device):\n",
     "    model.eval()\n",
     "    val_loss, val_accuracy = 0, 0\n",
     "    n_val_steps = 0\n",
-    "    \n",
+    "    all_preds, all_labels = [], []\n",
+    "\n",
     "    with torch.no_grad():\n",
     "        for batch in val_dataloader:\n",
     "            batch = tuple(t.to(device) for t in batch)\n",
@@ -237,14 +240,17 @@
     "\n",
     "            val_loss += loss.item()\n",
     "            preds = logits.argmax(dim=1)\n",
+    "            all_preds.extend(preds.tolist())\n",
+    "            all_labels.extend(labels.tolist())\n",
     "            val_accuracy += (preds == labels).float().mean().item()\n",
     "            n_val_steps += 1\n",
     "\n",
     "    val_loss /= n_val_steps\n",
     "    val_accuracy /= n_val_steps\n",
     "\n",
-    "    return val_loss, val_accuracy\n",
-    "\n"
+    "    precision, recall, f1, _ = precision_recall_fscore_support(all_labels, all_preds, average='weighted')\n",
+    "\n",
+    "    return val_loss, val_accuracy, precision, recall, f1\n"
    ]
   },
   {
@@ -276,6 +282,7 @@
     }
    ],
    "source": [
+    "\n",
     "MAX_LENGTH = 128\n",
     "BATCH_SIZE = 16\n",
     "NUM_EPOCHS = 5\n",
@@ -291,8 +298,8 @@
     "\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    train_model(model, train_dataloader, optimizer, device)\n",
-    "    val_loss, val_accuracy = evaluate_model(model, val_dataloader, device)\n",
-    "    print(f\"Epoch {epoch + 1} Val Loss: {val_loss:.3f}, Val Accuracy: {val_accuracy:.3f}\")\n"
+    "    val_loss, val_accuracy, val_precision, val_recall, val_f1 = evaluate_model(model, val_dataloader, device)\n",
+    "    print(f\"Epoch {epoch + 1} Val Loss: {val_loss:.3f}, Val Accuracy: {val_accuracy:.3f}, Val Precision: {val_precision:.3f}, Val Recall: {val_recall:.3f}, Val F1: {val_f1:.3f}\")"
    ]
   },
   {
