--- a/Milestone-3/CONVLSTM p3.ipynb
+++ b/Milestone-3/CONVLSTM p3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -22,32 +22,32 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "37/37 [==============================] - 29s 777ms/step - loss: 1.8346 - accuracy: 0.3382 - val_loss: 1.1481 - val_accuracy: 0.5286\n",
+      "37/37 [==============================] - 29s 758ms/step - loss: 1.8720 - accuracy: 0.3195 - val_loss: 1.2349 - val_accuracy: 0.5183\n",
       "Epoch 2/5\n",
-      "37/37 [==============================] - 32s 867ms/step - loss: 0.8009 - accuracy: 0.7061 - val_loss: 0.7047 - val_accuracy: 0.7489\n",
+      "37/37 [==============================] - 27s 736ms/step - loss: 0.7747 - accuracy: 0.7116 - val_loss: 0.6776 - val_accuracy: 0.7396\n",
       "Epoch 3/5\n",
-      "37/37 [==============================] - 38s 1s/step - loss: 0.3235 - accuracy: 0.8966 - val_loss: 0.5959 - val_accuracy: 0.7992\n",
+      "37/37 [==============================] - 29s 772ms/step - loss: 0.3448 - accuracy: 0.8806 - val_loss: 0.5612 - val_accuracy: 0.8005\n",
       "Epoch 4/5\n",
-      "37/37 [==============================] - 41s 1s/step - loss: 0.1094 - accuracy: 0.9704 - val_loss: 0.6111 - val_accuracy: 0.8167\n",
+      "37/37 [==============================] - 30s 803ms/step - loss: 0.1352 - accuracy: 0.9577 - val_loss: 0.5708 - val_accuracy: 0.8120\n",
       "Epoch 5/5\n",
-      "37/37 [==============================] - 39s 1s/step - loss: 0.0407 - accuracy: 0.9916 - val_loss: 0.7014 - val_accuracy: 0.8193\n",
-      "74/74 [==============================] - 4s 54ms/step\n",
+      "37/37 [==============================] - 31s 833ms/step - loss: 0.0544 - accuracy: 0.9867 - val_loss: 0.6535 - val_accuracy: 0.8184\n",
+      "74/74 [==============================] - 3s 38ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.95      0.94       214\n",
-      "           1       1.00      1.00      1.00       217\n",
-      "           2       0.82      0.50      0.62       213\n",
-      "           3       0.79      0.90      0.84       431\n",
-      "           4       0.99      0.98      0.98       215\n",
-      "           5       0.97      0.97      0.97       211\n",
-      "           6       0.84      0.78      0.81       206\n",
-      "           7       0.93      0.65      0.76       220\n",
-      "           8       0.47      0.72      0.57       217\n",
-      "           9       0.72      0.65      0.68       202\n",
+      "           0       0.95      0.93      0.94       214\n",
+      "           1       0.99      1.00      0.99       217\n",
+      "           2       0.64      0.67      0.65       213\n",
+      "           3       0.88      0.90      0.89       431\n",
+      "           4       1.00      0.94      0.97       215\n",
+      "           5       0.93      0.97      0.95       211\n",
+      "           6       0.87      0.67      0.75       206\n",
+      "           7       0.86      0.68      0.76       220\n",
+      "           8       0.52      0.57      0.54       217\n",
+      "           9       0.60      0.78      0.68       202\n",
       "\n",
       "    accuracy                           0.82      2346\n",
-      "   macro avg       0.84      0.81      0.82      2346\n",
-      "weighted avg       0.84      0.82      0.82      2346\n",
+      "   macro avg       0.82      0.81      0.81      2346\n",
+      "weighted avg       0.83      0.82      0.82      2346\n",
       "\n"
      ]
     }
@@ -60,18 +60,16 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "import string\n",
     "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.utils import pad_sequences\n",
+    "from keras.utils import to_categorical\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
-    "import tensorflow as tf\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Embedding, Conv1D, MaxPooling1D, LSTM, Dense, Bidirectional\n",
+    "from keras.layers import Embedding, Conv1D, MaxPooling1D, LSTM, Dense\n",
     "\n",
     "# Step 1: Load the data from the CSV file\n",
     "data_path = '/Users/charansaisadla/Desktop/ub classes/SEM2/NLP/data project/'\n",
-    "data=pd.read_csv(data_path+\"input.csv\")\n",
-    "\n",
+    "data = pd.read_csv(data_path + \"input.csv\")\n",
     "\n",
     "texts = data['text'].tolist()\n",
     "classes = data['class'].tolist()\n",
@@ -100,9 +98,10 @@
     "label_encoder = LabelEncoder()\n",
     "encoded_classes = label_encoder.fit_transform(classes)\n",
     "num_classes = len(label_encoder.classes_)\n",
+    "one_hot_classes = to_categorical(encoded_classes, num_classes=num_classes)\n",
     "\n",
     "# Step 4: Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(padded_sequences, encoded_classes, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(padded_sequences, one_hot_classes, test_size=0.2, random_state=42)\n",
     "\n",
     "# Step 5: Define and train the CRNN model\n",
     "model = Sequential()\n",
@@ -111,13 +110,14 @@
     "model.add(MaxPooling1D(pool_size=5))\n",
     "model.add(LSTM(128))\n",
     "model.add(Dense(num_classes, activation='softmax'))\n",
-    "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=5, batch_size=256)\n",
     "\n",
     "# Step 6: Evaluate the model on the test set\n",
     "y_pred_prob = model.predict(X_test)\n",
     "y_pred = y_pred_prob.argmax(axis=1)\n",
-    "report = classification_report(y_test, y_pred)\n",
+    "y_test_encoded = y_test.argmax(axis=1)\n",
+    "report = classification_report(y_test_encoded, y_pred)\n",
     "print(report)\n"
    ]
   },
