--- a/Milestone-3/BERT p2.ipynb
+++ b/Milestone-3/BERT p2.ipynb
@@ -2,38 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: transformers in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (4.27.3)\n",
-      "Requirement already satisfied: requests in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (2.28.2)\n",
-      "Requirement already satisfied: numpy>=1.17 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (1.24.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (23.0)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.11.0 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (0.13.3)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (0.13.2)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (2022.10.31)\n",
-      "Requirement already satisfied: filelock in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (3.10.4)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (4.65.0)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from transformers) (6.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from huggingface-hub<1.0,>=0.11.0->transformers) (4.5.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from requests->transformers) (3.1.0)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from requests->transformers) (1.26.15)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from requests->transformers) (2022.12.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from requests->transformers) (3.4)\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: torch in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (2.0.0)\n",
-      "Requirement already satisfied: typing-extensions in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from torch) (4.5.0)\n",
-      "Requirement already satisfied: sympy in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from torch) (1.11.1)\n",
-      "Requirement already satisfied: filelock in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from torch) (3.10.4)\n",
-      "Requirement already satisfied: networkx in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from torch) (3.0)\n",
-      "Requirement already satisfied: jinja2 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from torch) (3.1.2)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from jinja2->torch) (2.1.2)\n",
-      "Requirement already satisfied: mpmath>=0.19 in /Users/charansaisadla/Library/Python/3.9/lib/python/site-packages (from sympy->torch) (1.3.0)\n"
+      "Requirement already satisfied: transformers in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (4.28.1)\n",
+      "Requirement already satisfied: filelock in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (3.12.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.11.0 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (0.14.1)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (1.24.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (23.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (2023.5.5)\n",
+      "Requirement already satisfied: requests in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (2.29.0)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (0.13.3)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from transformers) (4.65.0)\n",
+      "Requirement already satisfied: fsspec in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.11.0->transformers) (2023.4.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.11.0->transformers) (4.5.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from requests->transformers) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from requests->transformers) (1.26.15)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from requests->transformers) (2022.12.7)\n",
+      "Requirement already satisfied: torch in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (2.0.0)\n",
+      "Requirement already satisfied: filelock in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from torch) (3.12.0)\n",
+      "Requirement already satisfied: typing-extensions in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from torch) (4.5.0)\n",
+      "Requirement already satisfied: sympy in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from torch) (1.11.1)\n",
+      "Requirement already satisfied: networkx in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from torch) (3.1)\n",
+      "Requirement already satisfied: jinja2 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from torch) (3.1.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from jinja2->torch) (2.1.1)\n",
+      "Requirement already satisfied: mpmath>=0.19 in /Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages (from sympy->torch) (1.3.0)\n"
      ]
     }
    ],
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
+      "/Users/charansaisadla/miniconda3/envs/TrialEnv1/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,17 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -261,11 +262,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 Val Loss: 0.176, Val Accuracy: 0.929\n",
-      "Epoch 2 Val Loss: 0.079, Val Accuracy: 0.973\n",
-      "Epoch 3 Val Loss: 0.062, Val Accuracy: 0.986\n",
-      "Epoch 4 Val Loss: 0.058, Val Accuracy: 0.989\n",
-      "Epoch 5 Val Loss: 0.156, Val Accuracy: 0.978\n"
+      "Epoch 1 Val Loss: 0.066, Val Accuracy: 0.982, Val Precision: 0.982, Val Recall: 0.982, Val F1: 0.981\n",
+      "Epoch 2 Val Loss: 0.053, Val Accuracy: 0.984, Val Precision: 0.984, Val Recall: 0.984, Val F1: 0.984\n",
+      "Epoch 3 Val Loss: 0.025, Val Accuracy: 0.995, Val Precision: 0.995, Val Recall: 0.995, Val F1: 0.995\n",
+      "Epoch 4 Val Loss: 0.046, Val Accuracy: 0.992, Val Precision: 0.992, Val Recall: 0.992, Val F1: 0.992\n",
+      "Epoch 5 Val Loss: 0.056, Val Accuracy: 0.991, Val Precision: 0.992, Val Recall: 0.991, Val F1: 0.991\n"
      ]
     }
    ],
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -315,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "machine\n"
+      "Predicted class: Human\n"
      ]
     }
    ],
