--- a/Milestone-3/CONVBI+LSTM  p3.ipynb
+++ b/Milestone-3/CONVBI+LSTM  p3.ipynb
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "qXO3jzc05k-h"
       },
@@ -181,39 +181,40 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2023-05-08 01:27:27.449970: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+            "2023-05-09 12:55:35.644279: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "37/37 [==============================] - 29s 746ms/step - loss: 1.8229 - accuracy: 0.3510 - val_loss: 1.0037 - val_accuracy: 0.6155\n",
+            "37/37 [==============================] - 28s 745ms/step - loss: 1.8806 - accuracy: 0.3483 - val_loss: 1.1191 - val_accuracy: 0.6053\n",
             "Epoch 2/5\n",
-            "37/37 [==============================] - 28s 767ms/step - loss: 0.6686 - accuracy: 0.7638 - val_loss: 0.6372 - val_accuracy: 0.7677\n",
+            "37/37 [==============================] - 29s 794ms/step - loss: 0.8174 - accuracy: 0.7130 - val_loss: 0.7992 - val_accuracy: 0.7221\n",
             "Epoch 3/5\n",
-            "37/37 [==============================] - 29s 797ms/step - loss: 0.2465 - accuracy: 0.9216 - val_loss: 0.5550 - val_accuracy: 0.8124\n",
+            "37/37 [==============================] - 29s 785ms/step - loss: 0.4261 - accuracy: 0.8592 - val_loss: 0.7758 - val_accuracy: 0.7361\n",
             "Epoch 4/5\n",
-            "37/37 [==============================] - 30s 805ms/step - loss: 0.0825 - accuracy: 0.9765 - val_loss: 0.6020 - val_accuracy: 0.8295\n",
+            "37/37 [==============================] - 29s 785ms/step - loss: 0.1786 - accuracy: 0.9478 - val_loss: 0.8523 - val_accuracy: 0.7327\n",
             "Epoch 5/5\n",
-            "37/37 [==============================] - 31s 837ms/step - loss: 0.0254 - accuracy: 0.9949 - val_loss: 0.6162 - val_accuracy: 0.8333\n",
-            "74/74 [==============================] - 3s 42ms/step\n",
+            "37/37 [==============================] - 29s 779ms/step - loss: 0.0675 - accuracy: 0.9856 - val_loss: 0.9687 - val_accuracy: 0.7421\n",
+            "74/74 [==============================] - 3s 41ms/step\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.97      0.97      0.97       214\n",
-            "           1       1.00      0.99      1.00       217\n",
-            "           2       0.76      0.56      0.65       213\n",
-            "           3       0.82      0.90      0.85       431\n",
-            "           4       1.00      0.99      0.99       215\n",
-            "           5       0.99      0.97      0.98       211\n",
-            "           6       0.78      0.85      0.82       206\n",
-            "           7       0.92      0.69      0.79       220\n",
-            "           8       0.52      0.68      0.59       217\n",
-            "           9       0.70      0.67      0.68       202\n",
+            "           0       0.93      0.94      0.93       214\n",
+            "           1       0.50      0.78      0.61       209\n",
+            "           2       1.00      1.00      1.00       217\n",
+            "           3       0.74      0.37      0.49       213\n",
+            "           4       0.55      0.46      0.50       217\n",
+            "           5       0.49      0.60      0.54       222\n",
+            "           6       0.87      0.66      0.75       220\n",
+            "           7       0.69      0.66      0.67       202\n",
+            "           8       0.67      0.81      0.73       206\n",
+            "           9       0.99      0.95      0.97       215\n",
+            "          10       0.92      0.96      0.94       211\n",
             "\n",
-            "    accuracy                           0.83      2346\n",
-            "   macro avg       0.85      0.83      0.83      2346\n",
-            "weighted avg       0.84      0.83      0.83      2346\n",
+            "    accuracy                           0.74      2346\n",
+            "   macro avg       0.76      0.74      0.74      2346\n",
+            "weighted avg       0.76      0.74      0.74      2346\n",
             "\n"
           ]
         }
@@ -237,8 +238,8 @@
         "\n",
         "\n",
         "# Step 1: Load the data from the CSV file\n",
-        "data_path = '/Users/charansaisadla/Desktop/ub classes/SEM2/NLP/data project/'\n",
-        "data = pd.read_csv(data_path + \"input.csv\")\n",
+        "\n",
+        "data = pd.read_csv(\"/Users/charansaisadla/Downloads/input-2.csv\")\n",
         "\n",
         "texts = data['text'].tolist()\n",
         "classes = data['class'].tolist()\n",
