Change to relative Path

--- a/Milestone-3/BERT p2.ipynb
+++ b/Milestone-3/BERT p2.ipynb
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data_path = '/Users/charansaisadla/Desktop/ub classes/SEM2/NLP/data project/'\n",
+    "data_path = '../data/'\n",
     "df=pd.read_csv(data_path+\"input.csv\")\n"
    ]
   },
